fixes, main content area format revisions
fixes, main content area format revisions

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,6 +10,9 @@ NEXT SCHEDULED WORK SESSION (DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+Add slight top margin for alerts popin window.
+
+
 Strip old admin nav out, after migrating ALL admin links over to new sidebar navs.
 
 
