--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6081,6 +6081,8 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -New config setting for using ANY google font ( https://fonts.google.com ) as the interface font
 
+-Added Redhat / Fedora support to the PHP binary auto-build script (for Linux Desktop Editions)
+
 -"Rolling Release" support for auto-installer
 
 -Miscellaneous user experience improvements
