--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6089,13 +6089,15 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -Added Twilio texting (SMS) API support
 
--Cleanup / optimizations
+-Upgraded to ZingChart v2.9.11
 
 -Upgraded to jQuery v3.6.3
 
 -Upgraded to BootStrap v5
 
 -Upgraded TextLocal API
+
+-Cleanup / optimizations 
 
 -New navigation system
 
