--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,13 +10,19 @@ NEXT SCHEDULED WORK SESSION (DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-For the domain header spoofing check, try writing the test file AS EARLY AS POSSIBLE in the runtime, and check it at the last second when inits / configs are done (and feature logic is about to run). Besides what we already have planned to fix the header domain spoofing attack check, since we never run the check more than once every 24 hours, add a 5 second sleep RIGHT BEFORE WE CHECK THE FILE WE WROTE. Set a var with the full file path when creating the check file, and delete it in the footer logic (since w only run this check in UI runtimes).
-
-
 Strip old admin nav out, after migrating ALL admin links over to new sidebar navs.
 
 
-We need a title at top of each page in the user area, like the admin area has (scrolls with page).
+Investing.com cryptocurrency news feed is titled incorrectly (wrong feed), AND Etheruem solidity feed is throwing errors.
+
+
+Add Linux desktop notes for building PHP binary in general documentation.
+
+
+Center privacy mode modal in new right-side content area system.
+
+
+For the domain header spoofing check, try writing the test file AS EARLY AS POSSIBLE in the runtime, and check it at the last second when inits / configs are done (and feature logic is about to run). Besides what we already have planned to fix the header domain spoofing attack check, since we never run the check more than once every 24 hours, add a 5 second sleep RIGHT BEFORE WE CHECK THE FILE WE WROTE. Set a var with the full file path when creating the check file, and delete it in the footer logic (since w only run this check in UI runtimes).
 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -146,17 +152,19 @@ DEBUGGING / TESTS / UX / QA / OTHER
 !!!!
 ===> config.php (and plug-conf.php for plugins) MUST ONLY CONTAIN STATIC CONFIGS,
 ===> as all configs are saved to / run from cache file: /cache/secured/ct_conf_XXXXXXXXX.dat
-!!!!
-===> Use SQLite for data storage that needs query capability (PHPdesktop supports SQLite).
 !!!!                                                                                    
 ===> May come in handy for writing PHP unit tests (in /app-lib/php/inline/debugging/):
 ===> https://stackoverflow.com/questions/861254/iterate-over-properties-of-a-php-class
 !!!!
+===> Use SQLite for data storage that needs query capability (PHPdesktop supports SQLite).
+!!!!                    
 ===> JS / CSS map file loading will timeout, if you load too many charts / news feeds.
 !!!!
 ===> Test in a WebKit-based browser [Epiphany|Safari|Midori], and Firefox / Chromium.
 !!!!
 ===> Think over what other "FAQ page / TROUBLESHOOTING.txt" entries would be helpful.
+!!!!
+===> Zingchart UPGRADES ARE FROZEN @ v2.9.10, DUR TO AN INTRODUCED RENDERING BUG
 !!!!
 ===> Try to do tests / UX / QA / debugging before adding new infrastructure
 ===> (find every flaming turd before we start a dumpster fire!).
@@ -165,12 +173,15 @@ DEBUGGING / TESTS / UX / QA / OTHER
 ===> then plenty of time is spent on UX / testing / debugging.
 !!!!
 ===> Don't require any higher than PHP v7.2 until PHP v9.
-!!!!                                                                                   
+!!!!                                                            
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-We don't need to auto-set the start page when submitting data on mining / tools pages anymore (as we leave the hash in the URL now).
+Make the app look a bit nicer in firefox if possible (WITHOUT FF-specific code).
+
+
+Darken up OR thicken up the light-theme text, so it's got better readability.
 
 
 Change semantic naming of 'coin_amnts' form id, as it now also handles charts / news feeds / etc.
@@ -283,6 +294,9 @@ FEATURES / NEW INFRASTRUCTURE / RESEARCH
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+Convert Arch linux support in auto-installer over to redhat (yum), as Arch does NOT have much package / setup support for libraries we use. WE ALREADY CONVERTED "BUILD-PHP-FOR-LINUX-DESKTOP.bash" OVER TO BE REDHAT COMPATIBLE, so use it as a template to integrate into FOLIO-INSTALL.bash. ALSO REMOVE ARCH DOCUMENTATION AND REPLACE WITH FEDORA DOCS.
+
+
 Integrate google authenticator / microsoft authenticator / authy / etc BEING REQUIRED TO CHANGE THE ADMIN SECURITY LEVEL FROM HIGH TO A LOWER LEVEL (and also make it OPTIONAL for login security):
 
 https://www.google.com/search?q=php+one+time+password+google+authenticator
@@ -309,19 +323,7 @@ Privacy mode toggle should also be moved to bottom of sidebar.
 On smaller screens (mobile etc), the COMPACT sidebar should be transformed into a top bar (horizontal across top, instead of vertical down the side, with DROP-downs OR SLIDE-downs for secondary submenus [like my biz site on mobile...whichever has a better 'feel']). Have each menu category be an icon that when clicked does a drop-down menu below it, THAT IS THE ENTIRE WIDTH OF THE SCREEN. Skip supporting 3-deep subnav here, unless we can make it work using the entire screen width for 2-deep subnav entries (for small screen tapping UX / less confusion). When each main drop-down is clicked, any other main drop-down should close automatically.
 
 
-Sidebar menu item text should be bold, and maybe even larger (than content area text).
-
-
-Try to shrink up the sidebar width as much as possible, without squishing the top nav together too much.
-
-
-Tweak sizes / colors / positioning in sidebar, until it feels just right.
-
-
 Remove localbitcoins support (they are closing shop).
-
-
-Remove binance.us HNT markets (closing 3/21/23)
 
 
 Add Bitcoin NFT support.
@@ -381,9 +383,6 @@ https://stepdata.substack.com/
 
 
 Add OPTIONAL Coingecko PRO API support: https://apiguide.coingecko.com/exclusive-endpoints/pro-api
-
-
-Convert Arch linux support in auto-installer over to redhat (yum), as Arch does have much pakage support for libraries we use.
 
 
 All NON-GLOBAL variables inside JAVASCRIPT functions should be started as 'var my_var_name': 
