--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -164,7 +164,7 @@ DEBUGGING / TESTS / UX / QA / OTHER
 !!!!
 ===> Think over what other "FAQ page / TROUBLESHOOTING.txt" entries would be helpful.
 !!!!
-===> Zingchart UPGRADES ARE FROZEN @ v2.9.10, DUR TO AN INTRODUCED RENDERING BUG
+===> Zingchart UPGRADES ARE FROZEN @ v2.9.10, DUE TO AN INTRODUCED RENDERING BUG
 !!!!
 ===> Try to do tests / UX / QA / debugging before adding new infrastructure
 ===> (find every flaming turd before we start a dumpster fire!).
