--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,16 +10,25 @@ NEXT SCHEDULED WORK SESSION (DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Strip old admin nav out, after migrating ALL admin links over to new sidebar navs.
+Test in desktop editions.
+
+
+Help / FAQ page link should be moved to bottom of sidebar, with a questionmark icon next to it. It ALSO should be a MODAL WINDOW (like 'more stats'), that is hidden in footer.php, so it can be opened in the user and admin areas just as easily. 
+
+
+Privacy mode toggle should also be moved to bottom of sidebar.
+
+
+When a plugin's admin iframe is viewed, update the sidebar submenu highlighting for it's entry as well.
+
+
+On admin login on safari browser, have a alert (like the cookies notice) saying safari is not supported in the admin interface.
 
 
 Investing.com cryptocurrency news feed is titled incorrectly (wrong feed), AND Etheruem solidity feed is throwing errors.
 
 
 Add Linux desktop notes for building PHP binary in general documentation.
-
-
-Center privacy mode modal in new right-side content area system.
 
 
 For the domain header spoofing check, try writing the test file AS EARLY AS POSSIBLE in the runtime, and check it at the last second when inits / configs are done (and feature logic is about to run). Besides what we already have planned to fix the header domain spoofing attack check, since we never run the check more than once every 24 hours, add a 5 second sleep RIGHT BEFORE WE CHECK THE FILE WE WROTE. Set a var with the full file path when creating the check file, and delete it in the footer logic (since w only run this check in UI runtimes).
@@ -181,9 +190,6 @@ DEBUGGING / TESTS / UX / QA / OTHER
 Make the app look a bit nicer in firefox if possible (WITHOUT FF-specific code).
 
 
-Darken up OR thicken up the light-theme text, so it's got better readability.
-
-
 Change semantic naming of 'coin_amnts' form id, as it now also handles charts / news feeds / etc.
 
 
@@ -206,9 +212,6 @@ Change "portfolio cache size gigabytes" system chart telemetry name to "tracker 
 
 
 In firefox, there is A TON of margin / padding in each portfolio data row's data cells. Reduce it to match chrome.
-
-
-On admin login on safari browser, have a alert (like the cookies notice) saying safari is not supported in the admin interface.
 
 
 Remove all linebreaks in javascript alert / confirm dialogue boxes, except for new paragraphs. Let the browser choose the max width on it's own (like they do nowadays)
@@ -306,18 +309,6 @@ https://www.rafaelwendel.com/en/2021/05/two-step-verification-with-php-and-googl
 https://github.com/sonata-project/GoogleAuthenticator
 
 https://stackoverflow.com/questions/tagged/sonata
-
-
-COLLAPSED SIDEBAR should show ACTIVE menu on page load / reload.
-
-
-window.location = $area_file + $curr_content_id; in functions.js makes the page auto-scroll down from the top just a few pixels (in both admin and user areas). See if we can make it NOT auto-scroll AT ALL.
-
-
-Help / FAQ page link should be moved to bottom of sidebar, with a questionmark icon next to it. It ALSO should be a MODAL WINDOW (like 'more stats'), that is hidden in footer.php, so it can be opened in the user and admin areas just as easily. 
-
-
-Privacy mode toggle should also be moved to bottom of sidebar.
 
 
 On smaller screens (mobile etc), the COMPACT sidebar should be transformed into a top bar (horizontal across top, instead of vertical down the side, with DROP-downs OR SLIDE-downs for secondary submenus [like my biz site on mobile...whichever has a better 'feel']). Have each menu category be an icon that when clicked does a drop-down menu below it, THAT IS THE ENTIRE WIDTH OF THE SCREEN. Skip supporting 3-deep subnav here, unless we can make it work using the entire screen width for 2-deep subnav entries (for small screen tapping UX / less confusion). When each main drop-down is clicked, any other main drop-down should close automatically.
