code cleanup, UX on new menu system, default config revisions
code cleanup, UX on new menu system, default config revisions

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -16,13 +16,13 @@ Test in desktop editions.
 Remove HNT donation links (on project page too).
 
 
+Add title tags with tooltip descriptions to admin nav links, like we already have for user area nav links.
+
+
 Help / FAQ page link should be moved to bottom of sidebar, with a questionmark icon next to it. It ALSO should be a MODAL WINDOW (like 'more stats'), that is hidden in footer.php, so it can be opened in the user and admin areas just as easily. 
 
 
 Privacy mode toggle should also be moved to bottom of sidebar.
-
-
-When a plugin's admin iframe is viewed, update the sidebar submenu highlighting for it's entry as well.
 
 
 On admin login on safari browser, have a alert (like the cookies notice) saying safari is not supported in the admin interface.
