--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,22 +10,22 @@ NEXT SCHEDULED WORK SESSION (DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Test in desktop editions.
-
-
-On admin login on safari browser, have a alert (like the cookies notice) saying safari is not supported in the admin interface.
-
-
 Help / FAQ page link should be moved to bottom of sidebar, with a questionmark icon next to it. It ALSO should be a MODAL WINDOW (like 'more stats'), that is hidden in footer.php, so it can be opened in the user and admin areas just as easily. 
 
 
 Privacy mode toggle should also be moved to bottom of sidebar.
 
 
+On admin login on safari browser, have a alert (like the cookies notice) saying safari is not supported in the admin interface.
+
+
 Add Linux desktop notes for building PHP binary in general documentation.
 
 
-Fix how the new sidebar nav system looks on mobile devices.
+Fix how the new sidebar nav system looks on mobile devices (even though we are NOT adding decent mobile support just yet).
+
+
+Test in desktop editions.
 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
